[project]
name = "unico-python"
version = "0.1.1"
description = "Python Client for the UNICO Api"
authors = [
    { name = "UNICO", email = "info@theunico.it" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
]
license = "MIT"
keywords = ["api", "client", "unico", "requests", "python"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["unico", "unico.*"]
